Course Categories Controller Added

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -446,6 +446,7 @@
                                 <span key="t-dashboards">Dashboards</span>
                             </a>
                             <ul class="sub-menu" aria-expanded="false">
+                                <li><a asp-controller="CourseCategory" asp-action="Index">Categories</a></li>
                                 <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
                                 <li><a asp-controller="Events" asp-action="Index">Events</a></li>
                                 <li><a asp-controller="Teachers" asp-action="Index">Teachers</a></li>
