Update Action Done CourseCategory

--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="col-6 col-md-3">
-            <a asp-controller="CourseCategory" asp-action="Index" class="btn btn-outline-secondary border form-control ">
+            <a asp-action="Index" class="btn btn-outline-secondary border form-control ">
                 Back to list
             </a>
         </div>
