--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
@@ -39,7 +39,7 @@
 										<td>@category.DateModified</td>
 
 																			<td>
-								<a  class="btn btn-warning mb-4">	<i class="bi bi-pencil-square"></i></a>
+								<a  asp-action="Update" asp-route-id="@category.Id" class="btn btn-warning mb-4">	<i class="bi bi-pencil-square"></i></a>
 								<a asp-action="Delete" asp-route-id="@category.Id"  class="btn btn-danger mb-4"><i class="bi bi-trash-fill"></i></a>
 								
 								</td>
