Course Create Action Done

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -1,5 +1,107 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model CourseViewModel
+<div class="col-xl-6">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title mb-4">Course Create Form</h4>
+            <form asp-controller="Course" asp-action="Create" method="post">
+                <div class="row mb-4">
+                    <label asp-for="Name" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Description" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="ImagePath" class="form-control" />
+                        <span asp-validation-for="ImagePath" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="StartDate" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="StartDate" class="form-control" />
+                        <span asp-validation-for="StartDate" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Duration" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Duration" class="form-control" />
+                        <span asp-validation-for="Duration" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="SkillLevel" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="SkillLevel" class="form-control" />
+                        <span asp-validation-for="SkillLevel" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Language" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Language" class="form-control" />
+                        <span asp-validation-for="Language" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="StudentCount" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="StudentCount" class="form-control" />
+                        <span asp-validation-for="StudentCount" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Assesment" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Assesment" class="form-control" />
+                        <span asp-validation-for="Assesment" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Fee" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <input asp-for="Fee" class="form-control" />
+                        <span asp-validation-for="Fee" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <label asp-for="Category" class="col-sm-3 col-form-label"></label>
+                    <div class="col-sm-9">
+                        <select asp-for="Category" class="form-control">
+                            <option value="">Select a category</option>
+                            @foreach (var category in ViewBag.Categories)
+                            {
+                                <option value="@category.Id">@category.Category</option>
+                            }
+                        </select>
+                        <span asp-validation-for="Category" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row justify-content-end">
+                    <div class="col-sm-9">
+                        <div>
+                            <button type="submit" class="btn btn-primary w-md">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+
+
+
+        </div>
+        <!-- end card body -->
+    </div>
+    <!-- end card -->
+</div>
