--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using EduHome.Core.Entities;
 @model IEnumerable<Course>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
 	ViewData["Title"] = "Index";
@@ -12,7 +13,7 @@
 		<div class="card">
 			<div class="card-body">
 				<h4 class="card-title">Sliders</h4>
-				<a asp-controller="Courses" asp-action="Create" class="btn btn-primary mb-4">Create New Course</a>
+				<a asp-controller="Course" asp-action="Create" class="btn btn-primary mb-4">Create New Course</a>
 				<div class="table-responsive">
 					<table class="table table-dark mb-0">
 
