--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -37,6 +37,7 @@
 									<td>
 										<a asp-action="Update" asp-route-id="@course.Id" class="btn btn-warning mb-4">	<i class="bi bi-pencil-square"></i></a>
 										<a asp-action="Delete" asp-route-id="@course.Id" class="btn btn-danger mb-4"><i class="bi bi-trash-fill"></i></a>
+										<a asp-action="Index" asp-route-id="@course.Id" class="btn btn-success mb-4"><i class="bi bi-chat-left-dots"></i></a>
 									</td>
 								</tr>
 								count++;
