--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -1,111 +1,129 @@
-﻿@*@using EduHomeUI.Areas.EHMasterPanel.ViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model CourseViewModel
-<div class="col-xl-6">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title mb-4">Course Create Form</h4>
-            <form asp-controller="Course" asp-action="Create" method="post">
-                <div class="row mb-4">
-                    <label asp-for="Name" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="Description" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Description" class="form-control" />
-                        <span asp-validation-for="Description" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="ImagePath" class="form-control" />
-                        <span asp-validation-for="ImagePath" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="ImageName" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="ImageName" class="form-control" />
-                        <span asp-validation-for="ImageName" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="StartDate" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="StartDate" class="form-control" />
-                        <span asp-validation-for="StartDate" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="Duration" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Duration" class="form-control" />
-                        <span asp-validation-for="Duration" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="SkillLevel" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="SkillLevel" class="form-control" />
-                        <span asp-validation-for="SkillLevel" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="Language" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Language" class="form-control" />
-                        <span asp-validation-for="Language" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="StudentCount" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="StudentCount" class="form-control" />
-                        <span asp-validation-for="StudentCount" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="Assesment" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Assesment" class="form-control" />
-                        <span asp-validation-for="Assesment" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="Fee" class="col-sm-3 col-form-label"></label>
-                    <div class="col-sm-9">
-                        <input asp-for="Fee" class="form-control" />
-                        <span asp-validation-for="Fee" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <label asp-for="CategoryId" class="col-sm-3 col-form-label">Category Name</label>
-                    <div class="col-sm-9">
-                        <select asp-for="CategoryId" asp-items="@ViewBag.Categories" class="form-control">
-                            <option value="">Select a category</option>
-                        </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
-                    </div>
-                </div>
 
-                <div class="row justify-content-end">
-                    <div class="col-sm-9">
-                        <div>
-                            <button type="submit" class="btn btn-primary w-md">Submit</button>
+@{
+    ViewData["Title"] = "Create";
+}
+
+<div class="row">
+
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Create course</h4>
+                <form method="post" class="app-search d-none d-lg-block">
+                    <div class="mb-3 row">
+                        <label asp-for="Name" for="example-text-input" class="col-md-2 col-form-label">Title</label>
+                        <div class="col-md-10">
+                            <input asp-for="Name" class="form-control" type="text">
+
                         </div>
                     </div>
-                </div>
-            </form>
+                    <div class="mb-3 row">
+                        <label asp-for="Description" for="example-search-input" class="col-md-2 col-form-label">Description</label>
+                        <div class="col-md-10">
+                            <input asp-for="Description" class="form-control" type="text"
+                                   id="example-search-input">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label asp-for="ImagePath" for="example-email-input" class="col-md-2 col-form-label">Image Path</label>
+                        <div class="col-md-10">
+                            <input asp-for="ImagePath" class="form-control" type="text"
+                                   id="example-email-input">
+                        </div>
+                    </div>
+                    <h3>Course Details</h3>
+                    <div class="mt-3">
+                        <label class="mb-1">About Course</label>
+                        <textarea asp-for="AboutCourse" class="form-control" maxlength="225" rows="3"
+                                  placeholder="This textarea has a limit of 225 chars."></textarea>
+                    </div>
+                    <div class="mt-3">
+                        <label class="mb-1">How to Apply </label>
+                        <textarea asp-for="HowToApply" class="form-control" maxlength="225" rows="3"
+                                  placeholder="This textarea has a limit of 225 chars."></textarea>
+                    </div>
+                    <div class="mt-3">
+                        <label class="mb-1">CERTIFICATION </label>
+                        <textarea asp-for="Certification" class="form-control" maxlength="225" rows="3"
+                                  placeholder="This textarea has a limit of 225 chars."></textarea>
+                    </div>
+                    <div class="mt-4">
+                        <div class="mb-3 row">
+                            <label class="col-md-2 col-form-label">Select Course Language</label>
+                            <div class="col-md-10">
+                                <div class="col-2">
 
+                                    <select class="form-select" asp-for="LanguageOptionId">
+                                        @foreach (var language in ViewBag.Languages)
+                                        {
+                                            <option value="@language.Id">@language.LanguageOption</option>
+                                        }
+                                    </select>
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <div class="mb-3 row">
+                            <label class="col-md-2 col-form-label">Select Course Level</label>
+                            <div class="col-md-10">
+                                <div class="col-2">
+                                    <select class="form-select" asp-for="SkillLevelId">
+                                        @foreach (var skillLevel in ViewBag.SkillLevels)
+                                        {
+                                            <option value="@skillLevel.Id">@skillLevel.Skill</option>
+                                        }
+                                    </select>
 
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <div class="mb-3 row">
+                            <label class="col-md-2 col-form-label">Select Course Assesments</label>
+                            <div class="col-md-10">
+                                <div class="col-2">
+                                    <select class="form-select" asp-for="AssesmentId">
+                                        @foreach (var assesment in ViewBag.Assesments)
+                                        {
+                                            <option value="@assesment.Id">@assesment.AssesmentType</option>
+                                        }
+                                    </select>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-4">
+                        <div class="mb-3 row">
+                            <label class="col-md-2 col-form-label">Select Category</label>
+                            <div class="col-md-10">
+                                <div class="col-2">
+
+                                    <select class="form-select" asp-for="CourseCategoryId">
+                                        @foreach (var catagory in ViewBag.Catagories)
+                                        {
+                                            <option value="@catagory.Id">@catagory.Catagory</option>
+                                        }
+                                    </select>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <button type="submit" class="btn btn-primary waves-effect waves-light">Create</button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <!-- end card body -->
-    </div>
-    <!-- end card -->
-</div>*@
+    </div> <!-- end col -->
+</div>
