--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -33,6 +33,12 @@
                             <input asp-for="ImagePath" class="form-control" type="text"
                                    id="example-email-input">
                         </div>
+                    </div> <div class="mb-3 row">
+                        <label asp-for="ImageName" for="example-email-input" class="col-md-2 col-form-label">Image Name</label>
+                        <div class="col-md-10">
+                            <input asp-for="ImageName" class="form-control" type="text"
+                                   id="example-email-input">
+                        </div>
                     </div>
                     <h3>Course Details</h3>
                     <div class="mt-3">
@@ -108,9 +114,9 @@
                                 <div class="col-2">
 
                                     <select class="form-select" asp-for="CourseCategoryId">
-                                        @foreach (var catagory in ViewBag.Catagories)
+                                        @foreach (var category in ViewBag.Categories)
                                         {
-                                            <option value="@catagory.Id">@catagory.Catagory</option>
+                                            <option value="@category.Id">@category.Category</option>
                                         }
                                     </select>
                                 </div>
