--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model CourseViewModel
 
