--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+
 @model CourseCategoryViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
