--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseDetails/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseDetails/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using EduHome.Core.Entities;
+﻿@*@using EduHome.Core.Entities;
 @model CourseDetails
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
@@ -54,4 +54,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div>*@
