Language create added

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -448,6 +448,8 @@
                             <ul class="sub-menu" aria-expanded="false">
                                 <li><a asp-controller="CourseCategory" asp-action="Index">Categories</a></li>
                                 <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
+                                <li><a asp-controller="Language" asp-action="Create">Languages</a></li>
+
                                 <li><a asp-controller="Events" asp-action="Index">Events</a></li>
                                 <li><a asp-controller="Teachers" asp-action="Index">Teachers</a></li>
                                 <li><a asp-controller="Testimonials" asp-action="Index">Testimonials</a></li>
