--- a/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Language/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.LanguageViewModels;
-@model IEnumerable<LanguageViewModel>
+﻿@using EduHome.Core.Entities;
+@model IEnumerable<Language>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
