--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -41,6 +41,35 @@
                                    id="example-email-input">
                         </div>
                     </div>
+                    <!-- Add these inputs to the form -->
+                    <div class="mb-3 row">
+                        <label asp-for="Start" class="col-md-2 col-form-label">Start</label>
+                        <div class="col-md-10">
+                            <input asp-for="Start" class="form-control" type="text">
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label asp-for="Duration" class="col-md-2 col-form-label">Duration</label>
+                        <div class="col-md-10">
+                            <input asp-for="Duration" class="form-control" type="text">
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label asp-for="ClassDuration" class="col-md-2 col-form-label">Class Duration</label>
+                        <div class="col-md-10">
+                            <input asp-for="ClassDuration" class="form-control" type="text">
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label asp-for="CourseFee" class="col-md-2 col-form-label">Course Fee</label>
+                        <div class="col-md-10">
+                            <input asp-for="CourseFee" class="form-control" type="text">
+                        </div>
+                    </div>
+
                     <h3>Course Details</h3>
                     <div class="mt-3">
                         <label class="mb-1">About Course</label>
