Tiny editor integration start

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -21,7 +21,7 @@
     <link href="/adminAssets/css/app.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-
+    <script src="https://cdn.tiny.cloud/1/ff8v2ird5lyqe50wf4ipht5okrrrs9dhxw53yimmdl0ziv6d/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
 </head>
 
