--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -71,21 +71,19 @@
                     </div>
 
                     <h3>Course Details</h3>
-                    <div class="mt-3">
-                        <label class="mb-1">About Course</label>
-                        <textarea asp-for="AboutCourse" class="form-control" maxlength="225" rows="3"
-                                  placeholder="This textarea has a limit of 225 chars."></textarea>
-                    </div>
-                    <div class="mt-3">
-                        <label class="mb-1">How to Apply </label>
-                        <textarea asp-for="HowToApply" class="form-control" maxlength="225" rows="3"
-                                  placeholder="This textarea has a limit of 225 chars."></textarea>
-                    </div>
-                    <div class="mt-3">
-                        <label class="mb-1">CERTIFICATION </label>
-                        <textarea asp-for="Certification" class="form-control" maxlength="225" rows="3"
-                                  placeholder="This textarea has a limit of 225 chars."></textarea>
-                    </div>
+                    <script>
+                        tinymce.init({
+                          selector: 'textarea',
+                          plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+                          toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+                          tinycomments_mode: 'embedded',
+                          tinycomments_author: 'Author name',
+                          mergetags_list: [
+                            { value: 'First.Name', title: 'First Name' },
+                            { value: 'Email', title: 'Email' },
+                          ]
+                        });
+                    </script>
                     <div class="mt-4">
                         <div class="mb-3 row">
                             <label class="col-md-2 col-form-label">Select Course Language</label>
