Text editor added to course create view

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -71,12 +71,7 @@
                     </div>
 
                     <h3>Course Details</h3>
-                    <script>
-                        tinymce.init({
-                            selector: '#aboutCourseTextarea',
-                            
-                        });
-                    </script>
+                    <textarea id="tiny" name="content"></textarea>
                     <div class="mt-4">
                         <div class="mb-3 row">
                             <label class="col-md-2 col-form-label">Select Course Language</label>
