--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Delete.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@using EduHome.Core.Entities;
-@model Course
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+@model CourseDeleteViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <form asp-controller="Course" asp-action="Delete" method="post">
@@ -13,12 +13,6 @@
         <label asp-for="Description" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <input asp-for="Description" disabled class="form-control" />
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="ImagePath" disabled class="form-control" />
         </div>
     </div>
 
