Course Index View - View Model Adding

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using EduHome.Core.Entities;
-@model IEnumerable<Course>
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+@model CourseIndexViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
