--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -27,7 +27,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							@foreach (var course in Model)
+							@foreach (var course in Model.courses)
 							{
 								@if (!course.IsDeleted)
 								{
