HttpGet Update Action Added

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Create.cshtml
@@ -2,7 +2,7 @@
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model CourseViewModel
-
+<partial name="_Notification" />
 @{
     ViewData["Title"] = "Create";
 }
