--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Delete.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
 @model CourseDeleteViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<partial name="_Notification" />
 
 <form asp-controller="Course" asp-action="Delete" method="post">
     <div class="row mb-4">
