--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
@@ -1,1 +1,68 @@
-﻿
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+@model CourseViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<form asp-controller="Course" asp-action="Update" method="post">
+    <div class="row mb-4">
+        <label asp-for="Name" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="Description" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="ImagePath" class="form-control" />
+            <span asp-validation-for="ImagePath" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="Start" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="Start" class="form-control" />
+            <span asp-validation-for="Start" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="Duration" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="Duration" class="form-control" />
+            <span asp-validation-for="Duration" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="ClassDuration" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="ClassDuration" class="form-control" />
+            <span asp-validation-for="ClassDuration" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label asp-for="CourseFee" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <input asp-for="CourseFee" class="form-control" />
+            <span asp-validation-for="CourseFee" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="row justify-content-end">
+        <div class="col-sm-9">
+            <div class="mt-3">
+                <button type="submit" class="btn btn-warning w-md">Update</button>
+            </div>
+        </div>
+        <div class="col-6 col-md-3 mt-3">
+            <a asp-controller="Courses" asp-action="Index" class="btn btn-outline-primary border form-control">
+                Back to list
+            </a>
+        </div>
+    </div>
+</form>
