--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
@@ -10,13 +10,7 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
-    <div class="row mb-4">
-        <label asp-for="Description" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="Description" class="form-control" />
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-    </div>
+
     <div class="row mb-4">
         <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
@@ -52,6 +46,13 @@
             <span asp-validation-for="CourseFee" class="text-danger"></span>
         </div>
     </div>
+    <div class="mb-3 row">
+        <label asp-for="Description" class="col-md-2 col-form-label">Description</label>
+        <div class="col-md-10">
+            <textarea id="tiny" asp-for="Description" class="form-control"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+    </div>
 
     <div class="row justify-content-end">
         <div class="col-sm-9">
@@ -60,7 +61,7 @@
             </div>
         </div>
         <div class="col-6 col-md-3 mt-3">
-            <a asp-controller="Courses" asp-action="Index" class="btn btn-outline-primary border form-control">
+            <a asp-controller="Course" asp-action="Index" class="btn btn-outline-primary border form-control">
                 Back to list
             </a>
         </div>
