--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
@@ -53,6 +53,51 @@
             <span asp-validation-for="CourseFee" class="text-danger"></span>
         </div>
     </div>
+    <div class="row mb-4">
+        <label asp-for="AssesmentId" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <select asp-for="AssesmentId" class="form-control">
+                <option value="">-- Select Assessment --</option>
+                @foreach (var assessment in ViewBag.AssessmentOptions)
+                {
+                    <option value="@assessment.Id">@assessment.AssesmentType</option>
+                }
+            </select>
+            <span asp-validation-for="AssesmentId" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <label asp-for="SkillLevelId" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <select asp-for="SkillLevelId" class="form-control">
+                <option value="">-- Select Skill Level --</option>
+                @foreach (var skillLevel in ViewBag.SkillLevelOptions)
+                {
+                    <option value="@skillLevel.Id">@skillLevel.Skill</option>
+                }
+            </select>
+            <span asp-validation-for="SkillLevelId" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <label asp-for="LanguageOptionId" class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <select asp-for="LanguageOptionId" class="form-control">
+                <option value="">-- Select Language Option --</option>
+                @foreach (var languageOption in ViewBag.LanguageOptions)
+                {
+                    <option value="@languageOption.Id">@languageOption.LanguageOption</option>
+                }
+            </select>
+            <span asp-validation-for="LanguageOptionId" class="text-danger"></span>
+        </div>
+    </div>
+
+    <!-- Continue with other dropdowns using the correct ViewBag property names -->
+
+
     <div class="mb-3 row">
         <label asp-for="Description" class="col-md-2 col-form-label">Description</label>
         <div class="col-md-10">
