--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Create.cshtml
@@ -21,6 +21,11 @@
                             <button type="submit" class="btn btn-primary w-md">Submit</button>
                         </div>
                     </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-action="Index" class="btn btn-outline-secondary border form-control ">
+                            Back to list
+                        </a>
+                    </div>
                 </div>
             </form>
         </div>
