--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseCategoryViewModels;
+
 
 @model CourseCategoryViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
