--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using EduHome.Core.Entities;
-@model IEnumerable<CourseCategory>
+﻿
+@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseCategoryViewModels;
+@model CourseCategoryIndexViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
@@ -27,7 +28,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							@foreach (var category in Model)
+							@foreach (var category in Model.Category)
 							{
 								@if (!category.IsDeleted)
 								{
