--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@using EduHome.Core.Entities;
-@model CourseCategory
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseCategoryViewModels;
+@model CourseCategoryDeleteViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <form  asp-action="Delete" method="post">
