--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -3,55 +3,51 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
-	ViewData["Title"] = "Index";
-	int count = 1;
+    ViewData["Title"] = "Index";
+    int count = 1;
 }
 <div class="container-fluid">
-
-	<!-- start page title -->
-	<div class="row">
-		<div class="card">
-			<div class="card-body">
-				<h4 class="card-title">Sliders</h4>
-				<a asp-controller="Course" asp-action="Create" class="btn btn-primary mb-4">Create New Course</a>
-				<div class="table-responsive">
-					<table class="table table-dark mb-0">
-
-						<thead>
-							<tr>
-								<th>#</th>
-								<th>Image</th>
-								<th>Name</th>
-								<th>Description</th>
-								<th>Actions</th>
-							</tr>
-						</thead>
-						<tbody>
-							@foreach (var course in Model.courses)
-							{
-								@if (!course.IsDeleted)
-								{
-									<tr>
-										<th scope="row">@count</th>
-										<td> <img src="/@course.ImagePath" style="width:100px" /> </td>
-										<td>@course.Name</td>
-										<td>@course.Description</td>
-										<td>
-											<a asp-action="Update" asp-route-id="@course.Id" class="btn btn-warning mb-4"><i class="bi bi-pencil-square"></i></a>
-											<a asp-action="Delete" asp-route-id="@course.Id" class="btn btn-danger mb-4"><i class="bi bi-trash-fill"></i></a>
-											<a asp-action="Details" asp-route-id="@course.Id" class="btn btn-success mb-4"><i class="bi bi-chat-left-dots"></i></a>
-										</td>
-									</tr>
-									count++;
-								}
-							}
-
-
-						</tbody>
-					</table>
-				</div>
-
-			</div>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Courses</h4>
+                    <a asp-controller="Course" asp-action="Create" class="btn btn-primary mb-4">Create New Course</a>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Image</th>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var course in Model.courses)
+                                {
+                                    @if (!course.IsDeleted)
+                                    {
+                                        <tr>
+                                            <td>@count</td>
+                                            <td><img src="@course.ImagePath" style="width:100px" /></td>
+                                            <td>@course.Name</td>
+                                            <td>@course.Description</td>
+                                            <td>
+                                                <a asp-action="Update" asp-route-id="@course.Id" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+                                                <a asp-action="Delete" asp-route-id="@course.Id" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+                                                <a asp-action="Details" asp-route-id="@course.Id" class="btn btn-success"><i class="bi bi-chat-left-dots"></i></a>
+                                            </td>
+                                        </tr>
+                                        count++;
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
