--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Update.cshtml
@@ -3,119 +3,132 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <form asp-controller="Course" asp-action="Update" method="post">
-    <div class="row mb-4">
-        <label asp-for="Name" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-    </div>
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title mb-4">Update Course</h4>
 
-    <div class="row mb-4">
-        <label asp-for="ImagePath" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="ImagePath" class="form-control" />
-            <span asp-validation-for="ImagePath" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="ImageName" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="ImageName" class="form-control" />
-            <span asp-validation-for="ImageName" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="Start" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="Start" class="form-control" />
-            <span asp-validation-for="Start" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="Duration" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="Duration" class="form-control" />
-            <span asp-validation-for="Duration" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="ClassDuration" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="ClassDuration" class="form-control" />
-            <span asp-validation-for="ClassDuration" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="CourseFee" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="CourseFee" class="form-control" />
-            <span asp-validation-for="CourseFee" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="row mb-4">
-        <label asp-for="AssesmentId" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <select asp-for="AssesmentId" class="form-control">
-                <option value="">-- Select Assessment --</option>
-                @foreach (var assessment in ViewBag.AssessmentOptions)
-                {
-                    <option value="@assessment.Id">@assessment.AssesmentType</option>
-                }
-            </select>
-            <span asp-validation-for="AssesmentId" class="text-danger"></span>
-        </div>
-    </div>
+                    <div class="row mb-4">
+                        <label asp-for="Name" class="col-sm-3 col-form-label">Title</label>
+                        <div class="col-sm-9">
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
 
-    <div class="row mb-4">
-        <label asp-for="SkillLevelId" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <select asp-for="SkillLevelId" class="form-control">
-                <option value="">-- Select Skill Level --</option>
-                @foreach (var skillLevel in ViewBag.SkillLevelOptions)
-                {
-                    <option value="@skillLevel.Id">@skillLevel.Skill</option>
-                }
-            </select>
-            <span asp-validation-for="SkillLevelId" class="text-danger"></span>
-        </div>
-    </div>
+                    <div class="row mb-4">
+                        <label asp-for="ImagePath" class="col-sm-3 col-form-label">Image Path</label>
+                        <div class="col-sm-9">
+                            <input asp-for="ImagePath" class="form-control" />
+                            <span asp-validation-for="ImagePath" class="text-danger"></span>
+                        </div>
+                    </div>
 
-    <div class="row mb-4">
-        <label asp-for="LanguageOptionId" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <select asp-for="LanguageOptionId" class="form-control">
-                <option value="">-- Select Language Option --</option>
-                @foreach (var languageOption in ViewBag.LanguageOptions)
-                {
-                    <option value="@languageOption.Id">@languageOption.LanguageOption</option>
-                }
-            </select>
-            <span asp-validation-for="LanguageOptionId" class="text-danger"></span>
-        </div>
-    </div>
+                    <div class="row mb-4">
+                        <label asp-for="ImageName" class="col-sm-3 col-form-label">Image Name</label>
+                        <div class="col-sm-9">
+                            <input asp-for="ImageName" class="form-control" />
+                            <span asp-validation-for="ImageName" class="text-danger"></span>
+                        </div>
+                    </div>
 
-    <!-- Continue with other dropdowns using the correct ViewBag property names -->
+                    <div class="row mb-4">
+                        <label asp-for="Start" class="col-sm-3 col-form-label">Start</label>
+                        <div class="col-sm-9">
+                            <input asp-for="Start" class="form-control" />
+                            <span asp-validation-for="Start" class="text-danger"></span>
+                        </div>
+                    </div>
 
+                    <div class="row mb-4">
+                        <label asp-for="Duration" class="col-sm-3 col-form-label">Duration</label>
+                        <div class="col-sm-9">
+                            <input asp-for="Duration" class="form-control" />
+                            <span asp-validation-for="Duration" class="text-danger"></span>
+                        </div>
+                    </div>
 
-    <div class="mb-3 row">
-        <label asp-for="Description" class="col-md-2 col-form-label">Description</label>
-        <div class="col-md-10">
-            <textarea id="tiny" asp-for="Description" class="form-control"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-    </div>
+                    <div class="row mb-4">
+                        <label asp-for="ClassDuration" class="col-sm-3 col-form-label">Class Duration</label>
+                        <div class="col-sm-9">
+                            <input asp-for="ClassDuration" class="form-control" />
+                            <span asp-validation-for="ClassDuration" class="text-danger"></span>
+                        </div>
+                    </div>
 
-    <div class="row justify-content-end">
-        <div class="col-sm-9">
-            <div class="mt-3">
-                <button type="submit" class="btn btn-warning w-md">Update</button>
+                    <div class="row mb-4">
+                        <label asp-for="CourseFee" class="col-sm-3 col-form-label">Course Fee</label>
+                        <div class="col-sm-9">
+                            <input asp-for="CourseFee" class="form-control" />
+                            <span asp-validation-for="CourseFee" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-4">
+                        <label asp-for="AssesmentId" class="col-sm-3 col-form-label">Assessment</label>
+                        <div class="col-sm-9">
+                            <select asp-for="AssesmentId" class="form-control">
+                                <option value="">-- Select Assessment --</option>
+                                @foreach (var assessment in ViewBag.AssessmentOptions)
+                                {
+                                    <option value="@assessment.Id">@assessment.AssesmentType</option>
+                                }
+                            </select>
+                            <span asp-validation-for="AssesmentId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-4">
+                        <label asp-for="SkillLevelId" class="col-sm-3 col-form-label">Skill Level</label>
+                        <div class="col-sm-9">
+                            <select asp-for="SkillLevelId" class="form-control">
+                                <option value="">-- Select Skill Level --</option>
+                                @foreach (var skillLevel in ViewBag.SkillLevelOptions)
+                                {
+                                    <option value="@skillLevel.Id">@skillLevel.Skill</option>
+                                }
+                            </select>
+                            <span asp-validation-for="SkillLevelId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-4">
+                        <label asp-for="LanguageOptionId" class="col-sm-3 col-form-label">Language Option</label>
+                        <div class="col-sm-9">
+                            <select asp-for="LanguageOptionId" class="form-control">
+                                <option value="">-- Select Language Option --</option>
+                                @foreach (var languageOption in ViewBag.LanguageOptions)
+                                {
+                                    <option value="@languageOption.Id">@languageOption.LanguageOption</option>
+                                }
+                            </select>
+                            <span asp-validation-for="LanguageOptionId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label asp-for="Description" class="col-md-2 col-form-label">Description</label>
+                        <div class="col-md-10">
+                            <textarea id="tiny" asp-for="Description" class="form-control"></textarea>
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-warning w-md">Update</button>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3 mt-3">
+                            <a asp-controller="Course" asp-action="Index" class="btn btn-outline-primary border form-control">
+                                Back to list
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-6 col-md-3 mt-3">
-            <a asp-controller="Course" asp-action="Index" class="btn btn-outline-primary border form-control">
-                Back to list
-            </a>
         </div>
     </div>
 </form>
