--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Delete.cshtml
@@ -2,23 +2,36 @@
 @model CourseCategoryDeleteViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<form  asp-action="Delete" method="post">
-    <div class="row mb-4">
-        <label asp-for="Category" class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <input asp-for="Category" disabled class="form-control" />
-        </div>
-    </div>
-    <div class="row justify-content-end">
-        <div class="col-sm-9">
-            <div>
-                <button type="submit" class="btn btn-danger w-md">Delete</button>
+<form asp-action="Delete" method="post">
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title mb-4">Delete Course Category</h4>
+
+                    <div class="row mb-4">
+                        <label asp-for="Category" class="col-sm-3 col-form-label">Category</label>
+                        <div class="col-sm-9">
+                            <input asp-for="Category" disabled class="form-control" />
+                        </div>
+                    </div>
+
+                    <!-- Continue with other form fields -->
+
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <div>
+                                <button type="submit" class="btn btn-danger w-md">Delete</button>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <a asp-action="Index" class="btn btn-outline-secondary border form-control">
+                                Back to list
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-6 col-md-3">
-            <a asp-action="Index" class="btn btn-outline-secondary border form-control ">
-                Back to list
-            </a>
         </div>
     </div>
 </form>
