--- a/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/CourseCategory/Index.cshtml
@@ -1,61 +1,52 @@
-﻿
-@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseCategoryViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.CourseCategoryViewModels;
 @model CourseCategoryIndexViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
-	ViewData["Title"] = "Index";
-	int count = 1;
+    ViewData["Title"] = "Index";
+    int count = 1;
 }
 <div class="container-fluid">
-
-	<!-- start page title -->
-	<div class="row">
-		<div class="card">
-			<div class="card-body">
-				<h4 class="card-title">Sliders</h4>
-				<a asp-action="Create" class="btn btn-primary mb-4">Create New Category</a>
-				<div class="table-responsive">
-					<table class="table table-dark mb-0">
-
-						<thead>
-							<tr>
-								<th>#</th>
-								<th>Name</th>
-								<th>DateCreated</th>
-								<th>DateModified</th>
-								<th>Actions</th>
-							</tr>
-						</thead>
-						<tbody>
-							@foreach (var category in Model.Category)
-							{
-								@if (!category.IsDeleted)
-								{
-									<tr>
-										<th scope="row">@count</th>
-
-										<td>@category.Category</td>
-										<td>@category.DateCreated</td>
-										<td>@category.DateModified</td>
-
-																			<td>
-								<a  asp-action="Update" asp-route-id="@category.Id" class="btn btn-warning mb-4">	<i class="bi bi-pencil-square"></i></a>
-								<a asp-action="Delete" asp-route-id="@category.Id"  class="btn btn-danger mb-4"><i class="bi bi-trash-fill"></i></a>
-								
-								</td>
-									</tr>
-									count++;
-								}
-
-
-							}
-
-						</tbody>
-					</table>
-				</div>
-
-			</div>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Categories</h4>
+                    <a asp-action="Create" class="btn btn-primary mb-4">Create New Category</a>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Name</th>
+                                    <th>Date Created</th>
+                                    <th>Date Modified</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var category in Model.Category)
+                                {
+                                    @if (!category.IsDeleted)
+                                    {
+                                        <tr>
+                                            <td>@count</td>
+                                            <td>@category.Category</td>
+                                            <td>@category.DateCreated</td>
+                                            <td>@category.DateModified</td>
+                                            <td>
+                                                <a asp-action="Update" asp-route-id="@category.Id" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+                                                <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+                                            </td>
+                                        </tr>
+                                        count++;
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
